<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TravelSecure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="createTripBtn_text">Create a Trip</string>
    <string name="title_activity_create_trip">Create a Trip</string>
    <string name="title_activity_edit_contacts">Edit Contacts</string>
    <string name="createTripTxt">Create a Trip</string>
    <string name="userDestinationQ">Where are you going?</string>
    <string name="destinationHint">Enter a Location</string>
    <string name="intervalQ">How often should we ping you?</string>
    <string name="intervalHint">Enter a Time (minutes) </string>
    <string name="returnTime">What time will you be back by?</string>
    <string name="chooseTimeBtn">Select a Time</string>
    <string name="startTripBtn">Start Trip</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="tripInProgress">Trip In Progress</string>
    <string name="title_activity_user_check_in">UserCheckInActivity</string>
    <string name="title_activity_check_in">CheckInActivity</string>

</resources>
