<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arjun.travelsecure.CreateTripActivity">

    <TextView
        android:id="@+id/createTripTxt"
        android:text="@string/createTripTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/userDestinationQ"
        android:text="@string/userDestinationQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/createTripTxt"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/userDestinationA"
        android:hint="@string/destinationHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/userDestinationQ"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/intervalQ"
        android:text="@string/intervalQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/userDestinationA"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/intervalA"
        android:hint="@string/intervalHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/intervalQ"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/returnTime"
        android:text="@string/returnTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/intervalA"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/chooseTimeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseTimeBtn"
        android:layout_marginTop="30dp"
        android:layout_below="@id/returnTime"
        android:layout_centerHorizontal="true"
        android:onClick="showTimePickerDialog"
        android:textSize="20sp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/startTripBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTripBtn"
        android:layout_marginTop="45dp"
        android:layout_below="@id/chooseTimeBtn"
        android:layout_centerHorizontal="true"
        android:onClick="startTrip"
        android:textSize="20sp"
        android:textAllCaps="false"
        />

</RelativeLayout>
